# attackmapper

./: .env.example  .gitignore  README.md  pyproject.toml
attackmapper/: __init__.py  cli.py
attackmapper/core/: __init__.py  display.py  engine.py  export.py  models.py
attackmapper/data/: ad_techniques.json  aws_techniques.json  azure_techniques.json  gcp_techniques.json  mitre_attack.json  network_techniques.json  threat_actors.json  tools_mapping.json
attackmapper/intel/: __init__.py  cache.py  cisa_kev.py  custom_feeds.py  cve.py  manager.py  otx.py  sources.py
attackmapper/modules/: __init__.py  base.py
attackmapper/modules/ad/: __init__.py  chains.py  techniques.py
attackmapper/modules/aws/: __init__.py  techniques.py
attackmapper/modules/azure/: __init__.py  techniques.py
attackmapper/modules/gcp/: __init__.py  techniques.py
attackmapper/modules/network/: __init__.py  techniques.py
attackmapper/templates/: attack_path.html.j2  interactive_report.html.j2  report.html.j2
tests/: __init__.py  test_ad_module.py  test_cli.py  test_engine.py
