[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attackmapper"
version = "0.1.0"
description = "CLI Attack Path Visualizer for Red Team Operations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "AttackMapper Team" }
]
keywords = ["security", "red-team", "attack-path", "mitre", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "sqlite-utils>=3.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
attackmapper = "attackmapper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["attackmapper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
